eliminar JS y añadir cambios a swiper

--- a/Slider-Swiper/index.html
+++ b/Slider-Swiper/index.html
@@ -206,6 +206,7 @@
         'onReady': function (event) {
           event.target.playVideo();
           swiper.autoplay.stop();
+          event.target.unMute(); // Añade esta línea para habilitar el audio
           swiper.allowTouchMove = false;
         },
         'onStateChange': function (event) {
